acm-application-configuration/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uploader
  name: uploader
spec:
  selector:
    matchLabels:
      app: uploader 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uploader 
    spec:
      containers:
      - image: quay.io/rcook/tools:demo
        name: uploader
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/app-root/src/uploaded
          name: uploaded
      volumes:
      - name: uploaded
        persistentVolumeClaim:
          claimName: upload
