acm-application-configuration/application/mysql-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  labels:
    app: store
  namespace: scribe
spec:
  selector:
    matchLabels:
      app: store
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: store
        tier: mysql
    spec:
      containers:
      - image: registry.redhat.io/rhmap47/mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
