acm-application-configuration/application/storefront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: store
  name: store
  namespace: scribe
spec:
  replicas: 1
  selector:
    matchLabels:
      name: store
  template:
    metadata:
      labels:
        name: store
    spec:
      containers:
      - image: quay.io/rcook/storefront:v11
        imagePullPolicy: Always
        name: store
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
