acm-application-configuration/application/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    app.kubernetes.io/component: mysql
    app.kubernetes.io/instance: store
    template: mysql-persistent-template
  name: mysql
  namespace: scribe 
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: store
    tier: mysql
status:
  loadBalancer: {}
