acm-application-configuration/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: uploader
    app.kubernetes.io/component: uploader
    app.kubernetes.io/instance: uploader
  name: uploader
  namespace: file
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: uploader
