acm-application-configuration/application/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: store
    app.kubernetes.io/component: store
    app.kubernetes.io/instance: test1
    name: store
  name: store
  namespace: scribe 
spec:
  ports:
  - name: port-1
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: port-2
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    name: store
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
