acm-application-configuration/application/file.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: file 
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: uploader
      app.kubernetes.io/component: uploader
      app.kubernetes.io/instance: uploader
    name: uploader
    namespace: file
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: uploader
      app.kubernetes.io/component: uploader
      app.kubernetes.io/instance: uploader
    name: uploader
    namespace: file
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: uploader:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/cooktheryan/uploader.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: php:7.3-ubi8
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: _j8zdTYzYvY8DhJjOdtc
      type: GitHub
    - generic:
        secret: UMj8Lw-ZXCwQZ-y-RrqR
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: uploader
      app.kubernetes.io/component: uploader
      app.kubernetes.io/instance: uploader
    name: uploader
    namespace: file
  spec:
    replicas: 1
    selector:
      deploymentconfig: uploader
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: uploader
      spec:
        containers:
        - image: uploader:latest
          name: uploader
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          volumeMounts:
          - mountPath: /opt/app-root/src/uploaded
            name: uploaded
        volumes:
        - name: uploaded 
          persistentVolumeClaim:
            claimName: upload
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - uploader
        from:
          kind: ImageStreamTag
          name: uploader:latest
      type: ImageChange
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: upload
    namespace: file
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 2Gi
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: uploader
      app.kubernetes.io/component: uploader
      app.kubernetes.io/instance: uploader
    name: uploader
    namespace: file
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: uploader
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: uploader
      app.kubernetes.io/component: uploader
      app.kubernetes.io/instance: uploader
    name: uploader
    namespace: file
  spec:
    host: file.octo.eng.rdu2.redhat.com 
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: uploader
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
