acm-application-configuration/application/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: uploader
    app.kubernetes.io/component: uploader
    app.kubernetes.io/instance: uploader
  name: uploader
  namespace: file
spec:
  host: file.octo.eng.rdu2.redhat.com 
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: uploader
    weight: 100
  wildcardPolicy: None
