acm-application-configuration/application/storefront-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: store
    app.kubernetes.io/component: store
    app.kubernetes.io/instance: test1
    name: store
  name: store
  namespace: scribe
spec:
  host: store.octo.eng.rdu2.redhat.com
  port:
    targetPort: port-1
  to:
    kind: Service
    name: store
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
